.opsera-pantry-pal/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-pantry-pal-dev
  labels:
    app: pantry-pal
    tenant: opsera
    environment: dev
