.opsera-pantry-pal/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry-pal
  labels:
    app: pantry-pal
    tenant: opsera
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: pantry-pal
